--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.workshala">
-   <application
-        android:label="workshala"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application
+        android:label="intershipapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
