--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "workshala",
-    "short_name": "workshala",
+    "name": "intershipapp",
+    "short_name": "intershipapp",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
