--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
   
     - assests/images/wordpress logo.jpg
     - assests/images/Frame 16.png
+    - assests/images/Group.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
