--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.6.0
+  curved_navigation_bar: ^1.0.3
+  http: ^1.1.0
+  get: ^4.6.6
+  snackbar: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -82,11 +86,9 @@ flutter:
     - assets/google1.png
     - assets/upload.png
     - assets/pdf.png
-   
-
-  
     - assests/images/wordpress logo.jpg
     - assests/images/Frame 16.png
+    - assests/images/Group.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
