--- a/workshala_csi-v1.0.1/pubspec.yaml
+++ b/workshala_csi-v1.0.1/pubspec.yaml
@@ -11,6 +11,12 @@ dependencies:
   carousel_slider: ^4.0.0
   smooth_page_indicator: ^1.0.0+2
   intl: ^0.18.0
+  provider: ^6.1.1
+  http: ^1.1.0
+  shared_preferences: ^2.2.2
+  another_flushbar: ^1.12.30
+  flutter_flushbar: ^0.0.2
+
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
