--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
     - assests/images/wordpress logo.jpg
     - assests/images/Frame 16.png
     - assests/images/Group.png
+    - assests/images/profiel.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
