--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ flutter:
     - assests/images/Frame 16.png
     - assests/images/Group.png
     - assets/cross.png
+    - assets/WhatsApp Image 2023-11-18 at 19.42.37_16844992.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
