--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   curved_navigation_bar: ^1.0.3
   http: ^1.1.0
+  flutter_spinkit: ^5.1.0
   get: ^4.6.6
   snackbar: ^1.0.2
   flutter_secure_storage: ^5.1.0
